Cluster1/testcd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  labels:
    app.kubernetes.io/instance: apache
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apache
    app.kubernetes.io/version: 2.4.65
    helm.sh/chart: apache-11.4.1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/instance: apache
    app.kubernetes.io/name: apache
  type: LoadBalancer
