Cluster1/testcd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apache
  labels:
    app.kubernetes.io/instance: apache
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apache
    app.kubernetes.io/version: 2.4.65
    helm.sh/chart: apache-11.4.1
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: apache
    weight: 100
  wildcardPolicy: None
